# RoseSong

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflow/: ci.yml
installation_script/: install_rosesong.sh
roseplayer_cli/: Cargo.toml  playlist.toml
roseplayer_cli/src/: audio_url.rs  error.rs  main.rs
roseplayer_cli/src/player/: audio_url.rs  mod.rs  player.rs  playlist.rs
rosesong/: dbus.rs  error.rs  main.rs  temp_dbus.rs
rosesong-cli/: Cargo.toml  playlist.toml
rosesong-cli/rosesong/: error.rs  main.rs
rosesong-cli/rosesong/player/: network.rs  player.rs  playlist.rs
rosesong-cli/rsg/: cli.rs  error.rs
rosesong-cli/rsg/bilibili/: fetch_audio_info.rs
rosesong-cli/src/: cli.rs  dbus.rs  error.rs  main.rs  messages.rs
rosesong-cli/src/bilibili/: fetch_audio_info.rs  fetch_audio_url.rs  mod.rs
rosesong-cli/src/cli/: cli.rs
rosesong-cli/src/cli/bilibili/: fetch_audio_info.rs  mod.rs
rosesong-cli/src/player/: mod.rs  player.rs  playlist.rs
rosesong/bilibili/: fetch_audio_url.rs  mod.rs
rosesong/player/: gst_logic.rs  mod.rs  network.rs  player.rs  playlist.rs
rsg/: cli.rs  error.rs
rsg/bilibili/: fetch_audio_info.rs
