[package]
name = "rosesong"
version = "1.0.0"
edition = "2021"
authors = ["Florian Liao <huahuadeliaoliao@icloud.com>"]
description = "Command line player built by rust based on gstreamer decoding and playing bilibili audio, using dbus for inter-process communication."
license = "MIT"
repository = "https://github.com/huahuadeliaoliao/RoseSong"
keywords = ["audio", "player", "bilibili", "gstreamer", "dbus"]
categories = ["audio", "media", "command-line-utilities"]

[[bin]]
name = "rosesong"
path = "rosesong/main.rs"

[[bin]]
name = "rsg"
path = "rsg/cli.rs"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
flexi_logger = "0.29.2"
futures-util = "0.3.31"
glib = "0.20.4"
gstreamer = "0.23.2"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = [
    "macros",
    "sync",
    "rt",
    "rt-multi-thread",
    "time",
    "signal",
    "io-std"
] }
toml = "0.8.19"
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }

[lints.clippy]
pedantic = { level = "warn" }

[package.metadata.deb]
maintainer = "Florian Liao <huahuadeliaoliao@icloud.com>"
extended-description = "Command line player built by rust based on gstreamer decoding and playing bilibili audio, using dbus for inter-process communication."
depends = "libc6, libgstreamer1.0-0, libglib2.0-0, libssl-dev, libdbus-1-3, libdbus-glib-1-2"
section = "sound"
priority = "optional"
