[package]
name = "rosesong"
version = "1.0.0"
edition = "2021"
authors = ["Florian Liao <huahuadeliaoliao@icloud.com>"]
description = "Command line player built by rust based on gstreamer decoding and playing bilibili audio, using dbus for inter-process communication."
license = "MIT"
repository = "https://github.com/huahuadeliaoliao/RoseSong"
keywords = ["audio", "player", "bilibili", "gstreamer", "dbus"]
categories = ["multimedia::audio", "multimedia", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "rosesong"
path = "rosesong/main.rs"

[[bin]]
name = "rsg"
path = "rsg/cli.rs"

[profile.release]
lto = "fat"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
flexi_logger = "0.29"
futures-util = "0.3"
glib = "0.20"
gstreamer = "0.23"
log = "0.4"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
thiserror = "2"
tikv-jemallocator = "0.6"
tokio = { version = "1", features = [
  "macros",
  "sync",
  "rt",
  "rt-multi-thread",
  "time",
  "signal",
  "io-std",
] }
toml = "0.8"
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }

[lints.clippy]
pedantic = { level = "warn" }

[package.metadata.deb]
maintainer = "Florian Liao <huahuadeliaoliao@icloud.com>"
extended-description = "Command line player built by rust based on gstreamer decoding and playing bilibili audio, using dbus for inter-process communication."
depends = "libc6, libgstreamer1.0-0, libglib2.0-0, libssl-dev, libdbus-1-3, libdbus-glib-1-2"
section = "sound"
priority = "optional"
