[package]
name = "roseplayer_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = "0.22.5"
gstreamer-player = "0.22.0"
glib = "0.19.7"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["macros", "sync", "rt", "rt-multi-thread", "time", "signal"] }
serde = { version = "1.0.201", features = ["serde_derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"