[package]
name = "roseplayer_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rosesong"
path = "rosesong/main.rs"

[[bin]]
name = "rsg"
path = "rsg/cli.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
flexi_logger = "0.28.5"
futures-util = "0.3.30"
glib = "0.19.9"
gstreamer = "0.22.6"
lazy_static = "1.5.0"
log = "0.4.22"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = [
    "macros",
    "sync",
    "rt",
    "rt-multi-thread",
    "time",
    "signal",
] }
tokio-uds = "0.2.7"
toml = "0.8.14"
zbus = { version = "4.3.1", default-features = false, features = ["tokio"] }
